tests/fixtures/invalid/unit_zero_exponent.gcl
// error: `^0` erases its term and produced an empty display label (#648 N3).
param a: Dimensionless = 5.0;
node bad: Dimensionless = @a -> m^0;
